@@ -1,4 +1,4 @@
-/* $Id: table.c,v 1.21 2002/02/22 17:55:17 ukai Exp $ */
+/* $Id: table.c,v 1.22 2002/03/12 16:59:50 ukai Exp $ */
 /* 
  * HTML table
  */
@@ -758,6 +758,7 @@ do_refill(struct table *tbl, int row, int col, int maxlimit)
     init_henv(&h_env, &obuf, envs, MAX_ENV_LEVEL,
 	      (TextLineList *)tbl->tabdata[row][col],
 	      get_spec_cell_width(tbl, row, col), 0);
+    obuf.flag |= RB_INTABLE;
     if (h_env.limit > maxlimit)
 	h_env.limit = maxlimit;
     if (tbl->border_mode != BORDER_NONE && tbl->vcellpadding > 0)
